deploy/k8s/overlays/staging/patches/ingress-cert-manager-issuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
